--- a/Changes
+++ b/Changes
@@ -2,3 +2,4 @@ Revision history for Devel::JSON
 
 {{$NEXT}}
 	Initial working code. Made during the Perl QA Hackathon 2015.
+	Released from the c-base hackerspace in Berlin.
