Lower runtime deps; increase rutime recommends
Encode 2.73 is now only recommended (this is needed on Win32 for UTF-8
output), 2.05 required (this is where encoding::_get_locale_encoding
appeared).
JSON::MaybeXS recommended because it includes the latest fixes.

--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Devel::JSON
 
 {{$NEXT}}
-	Fix dependencies: requires Encode 2.73.
+	Fix dependencies:
+	- Encode 2.05 required, 2.73 recommended
+	- JSON::MaybeXS 1.003004 recommended
 
 0.901     2015-04-17 08:30:06+02:00 Europe/Paris
 	Major fix: the expression is now evaluated in scalar context.
