--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for Devel::JSON
 	Fix dependencies:
 	- Encode 2.05 required, 2.73 recommended
 	- JSON::MaybeXS 1.003004 recommended
+	Fix for environments where locale encoding detection (by
+	  &encoding::_get_locale_encoding) fails.
 
 0.901     2015-04-17 08:30:06+02:00 Europe/Paris
 	Major fix: the expression is now evaluated in scalar context.
