--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Devel::JSON
 
 {{$NEXT}}
 	Document how to output a boolean value (use JSON::PP::{true,false}).
+	Repository moved to https://github.com/dolmen-perl5/Devel-JSON
 
 1.000     2016-02-17 23:17:30+01:00 Europe/Paris
 	Dependencies: require Encode 2.73 on MSWin32 and netbsd.
